[package]
name = "docker-healthchecks"
description = "Healthchecks.io Integration for Docker Healthchecks"
version = "0.2.4"
edition = "2021"
rust-version = "1.60.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Defelo/docker-healthchecks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", default-features = false, features = ["std"] }
config = { version = "0.13.3", default-features = false }
docker-api = { version = "0.13", default-features = false }
futures-util = { version = "0.3.28", default-features = false }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
tokio = { version = "1.28.1", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "ansi", "env-filter"] }
