[package]
name = "docker-healthchecks"
description = "Healthchecks.io Integration for Docker Healthchecks"
version = "0.2.12"
edition = "2021"
rust-version = "1.63.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Defelo/docker-healthchecks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", default-features = false, features = ["std"] }
config = { version = "0.14.0", default-features = false }
docker-api = { version = "0.14", default-features = false }
futures-util = { version = "0.3.30", default-features = false }
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
tokio = { version = "1.39.1", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter"] }
